PROJECT (RNN_WAVE_FUNCTION)
CMAKE_MINIMUM_REQUIRED (VERSION 3.10 FATAL_ERROR)

#SET (USE_CUDA_GPU TRUE)
SET (TARGETS ${TARGETS} VMC-CH-pRNN)

FIND_PACKAGE(Torch REQUIRED)
INCLUDE (${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindTRNG4.cmake)
FIND_PACKAGE (CUDA REQUIRED)
SET (CUDA_NVCC_FLAGS -O3 -Xcompiler -fopenmp -std=c++14 -DMIN_CUDA_ARCH=700 --expt-relaxed-constexpr)

FOREACH (TARGET ${TARGETS})
  IF (USE_CUDA_GPU)
    SET (CUDA_NVCC_FLAGS "-O3 -std=c++14 --expt-relaxed-constexpr")
    CUDA_ADD_EXECUTABLE(${TARGET}-gpu ${CMAKE_CURRENT_SOURCE_DIR}/gpu/src/${TARGET}.cu)
    TARGET_LINK_LIBRARIES(${TARGET}-gpu ${TORCH_LIBRARIES} ${TRNG4_LIBRARIES})
  ELSE ()
    SET (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O3 -std=c++14")
    ADD_EXECUTABLE (${TARGET}-cpu ${CMAKE_CURRENT_SOURCE_DIR}/cpu/src/${TARGET}.cpp)
    TARGET_LINK_LIBRARIES(${TARGET}-cpu ${TORCH_LIBRARIES} ${TRNG4_LIBRARIES})
  ENDIF ()
ENDFOREACH()
