PROJECT (RNN_WAVE_FUNCTION)
CMAKE_MINIMUM_REQUIRED (VERSION 3.10 FATAL_ERROR)

#SET (USE_CUDA_GPU TRUE)

# source codes
SET (TARGETS ${TARGETS} VMC-CH-pRNN)

IF (USE_CUDA_GPU)
  FIND_PACKAGE (CUDA REQUIRED)
ENDIF ()
INCLUDE (${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindTorch.cmake)
INCLUDE (${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindTRNG4.cmake)

FOREACH (TARGET ${TARGETS})
  IF (USE_CUDA_GPU)
    SET (CUDA_NVCC_FLAGS "-O3 -std=c++14 --expt-relaxed-constexpr -D_GLIBCXX_USE_CXX11_ABI=0")
    CUDA_ADD_EXECUTABLE(${TARGET}-gpu ${CMAKE_CURRENT_SOURCE_DIR}/gpu/src/${TARGET}.cu)
    TARGET_LINK_LIBRARIES(${TARGET}-gpu ${TORCH_LIBRARIES} ${TRNG4_LIBRARIES})
  ELSE ()
    SET (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O3 -std=c++14 -D_GLIBCXX_USE_CXX11_ABI=0")
    ADD_EXECUTABLE (${TARGET}-cpu ${CMAKE_CURRENT_SOURCE_DIR}/cpu/src/${TARGET}.cpp)
    TARGET_LINK_LIBRARIES(${TARGET}-cpu ${TORCH_LIBRARIES} ${TRNG4_LIBRARIES})
  ENDIF ()
ENDFOREACH ()
